<resources>
    <string name="app_name">Recipe_App</string>
    <string name="entry_prompt">Connect for your favourite recipes:</string>
    <string name="emailLbl">Email:</string>
    <string name="passwordLbl">Password</string>
    <string name="emailHint">example@gmail.com</string>
    <string name="passwordHint">Password here...</string>
    <string name="signUpBtnText">Sign up</string>
    <string name="signInBtnText">Sign in</string>
    <string name="signUpPrompt">Enter our recipes community today:</string>
    <string name="signUpScreenReturn">Return to entry</string>
    <string name="invalidFieldsError">All fields must be valid.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="HomeNav">Home</string>
    <string name="MyRecipesNav">My Recipes</string>


</resources>