<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/entryLogo"
        android:layout_width="350dp"
        android:layout_height="239dp"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"/>


    <TextView
        android:id="@+id/entry_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/entryLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="#FF5722"
        android:text="@string/signUpPrompt"
        android:fontFamily="sans-serif-medium"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/entry_prompt"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="#FF5722"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_prompt"
        android:text="@string/emailLbl"
        android:fontFamily="sans-serif-medium"


        />
    <com.google.android.material.textfield.TextInputEditText
        app:layout_constraintTop_toBottomOf="@id/email_prompt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:id="@+id/email_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/emailHint"
        />
    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLbl"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"

        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:maxLength="20"
        app:layout_constraintTop_toBottomOf="@id/password_prompt"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"/>

    <Button
        android:id="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/signUpScreenReturn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#FF9800"

        android:textSize="20sp"/>
    <Button
        android:id="@+id/signUpBtn"
        android:text="@string/signUpBtnText"
        app:layout_constraintBottom_toTopOf="@id/signInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        android:backgroundTint="#FF9800"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>